# intelligent-document-processor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  batches.py  documents.py
app/core/: config.py  exceptions.py  logging.py
app/db/: __init__.py  session.py
app/extractors/: __init__.py  registry.py
app/llm/: __init__.py  base.py  factory.py  mock.py
app/models/: __init__.py  document.py
app/pipeline/: __init__.py  batch.py  pipeline.py  preprocessor.py
app/schemas/: __init__.py  document.py
app/services/: __init__.py  document_service.py  storage.py
tests/: conftest.py
tests/integration/: test_api.py  test_batch.py  test_pipeline.py
tests/unit/: test_mock_llm.py  test_preprocessor.py  test_registry.py  test_storage.py
